--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,6 @@ cython_debug/
 #.idea/
 rosetta_workshop_2024/local/1-structure_prediction/2M2Q.fasta
 rosetta_workshop_2024/local/1-structure_prediction/1FD4_dimer.fasta
+rosetta_workshop_2024/local/1-structure_prediction/output/*
+rosetta_workshop_2024/local/1-structure_prediction/output/2M2Q_coverage.png
+rosetta_workshop_2024/local/1-structure_prediction/output/2M2Q.a3m
