added rosetta_scripts docker

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,20 @@ rosetta_workshop_2024/local/1-structure_prediction/1FD4_dimer.fasta
 rosetta_workshop_2024/local/1-structure_prediction/output/*
 rosetta_workshop_2024/local/1-structure_prediction/output/2M2Q_coverage.png
 rosetta_workshop_2024/local/1-structure_prediction/output/2M2Q.a3m
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/protein_prep/3PBL_A.fasta
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/protein_prep/3PBL_A.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/ligand_prep/ETQ.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/ligand_prep/ETQ.params
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/ETQ.params
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/ETQ_conformers.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ.pdb
+.gitignore
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/ETQ.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/ligand_prep/ETQ_conformers.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0001.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0002.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0003.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0004.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0005.pdb
+rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/score.sc
