--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,10 @@ rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ET
 rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0004.pdb
 rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/3PBL_A_ETQ_0005.pdb
 rosetta_workshop_2024/local/2-ligand_docking/1_vanilla_docking/docking/score.sc
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/B_1.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/C_1.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/D_1.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/E_1.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/F_1.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/protein_ligands_0001.pdb
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/score.sc
