--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/E_1.pdb
 rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/F_1.pdb
 rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/protein_ligands_0001.pdb
 rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/score.sc
+rosetta_workshop_2024/local/2-ligand_docking/2_Ensemble_docking/prep/conformers/4AGL.conformers.sdf
